Copyright: (c) Cody Precord 2005-2008
License: wxWindows

Change Log:

#-----------------------------------------------------------------------------#
Changes since last release:

VERSION 0.2.xx
DATE xx/xx/2008
11th Alpha Release

NEWS:


NEW: [features/improvements]
+New CodeBrowser plugin for browsing classes, functions, variables and other
significant objects in a code document.
+New version of Launch (add support for haXe, PHP)
+New version of Projects Plugin (add support for Bazaar)
+Improved Perl and Lisp highlighting
+New version of FileBrowser with some minor fixes and enhancements
+Colorize Error and Warning messages in Log Viewer
+Use prefered font from preferences in Log and Launch output
+Support for (Objective C, ActionScript, Scheme)
+Add option to automatically check for updates on startup
+Add menu mneomnics for navigating menus without mouse (gtk/msw)
+Added Dutch translation (contributed by Gerard Petersen)
+Added Simplified Chinese translation (contributed by heccj)
+Updated Russian translation (contributed by slavOnic)
+Updated German translation (contributed by nireb)
+Updated Japanese translation

BUG FIXES:
+Fix bug in that would prevent opening files from command line or via drag/drop
+Editra Style Sheets allow fonts with non ascii characters in their names
+Editra Style Sheets parse error on fonts with spaces in their names
+Numerous minor unicode fixes throughout the editor
+Fix memory leak in the LogViewer and Launch
+Fix some dead object errors from improper event handling
+Fix BOM related file opening errors
+Php autocomment now works

#-----------------------------------------------------------------------------#
Changes since last release:

VERSION 0.2.65
DATE 02/08/2008
10th Alpha Release

NEWS:
This release includes major improvements to the detection and handling of file
encodings and reporting of related errors when they happen. As part of this
enhancement support for magic encoding comments are now supported in the editor