@@ -18,13 +18,13 @@ NEWS:
 NEW: [features/improvements]
 +New CodeBrowser plugin for browsing classes, functions, variables and other
 significant objects in a code document.
-+New version of Launch (add support for haXe, PHP)
++New version of Launch (add support for Ada, haXe, PHP, PostScript)
 +New version of Projects Plugin (add support for Bazaar)
++Support for (Objective C, ActionScript, Scheme)
 +Improved Perl and Lisp highlighting
 +New version of FileBrowser with some minor fixes and enhancements
 +Colorize Error and Warning messages in Log Viewer
 +Use prefered font from preferences in Log and Launch output
-+Support for (Objective C, ActionScript, Scheme)
 +Add option to automatically check for updates on startup
 +Add menu mneomnics for navigating menus without mouse (gtk/msw)
 +Added Dutch translation (contributed by Gerard Petersen)
@@ -42,6 +42,8 @@ BUG FIXES:
 +Fix some dead object errors from improper event handling
 +Fix BOM related file opening errors
 +Php autocomment now works
++Copy/Paste via primary selection under x11 now works
++Error launching webbrowser from Editra under Windows
 
 #-----------------------------------------------------------------------------#
 Changes since last release:
